--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>DOERs | For a More Sustainable and Greener Future</title>
 </head>
 <body>
+    <header id="header-nav" class="header-nav"></header>
     
+    <script src="./scripts/includes/headers/headerNav.js"></script>
 </body>
 </html>
